--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="accordion-text-wrapper"><p class="accordion-text">Lorem ipsum dolor sit amet, vix mandamus expetenda adolescens te, vivendo ponderum per ea. Ullum tincidunt dissentiet pro at. Usu atqui paulo soleat in, no est vide iisque quaerendum, ipsum antiopam in vix. Ex cum cibo quodsi luptatum, eu utamur intellegat usu.
         Eligendi assueverit te sit, ad putant iuvaret disputando ius. Ipsum maluisset ne vim, dicta decore semper his in. Mel justo labores an, mea at diam impedit percipit. Ut cum adipisci necessitatibus, illum neglegentur an vel, alii elit hendrerit in per. Te cum volumus reprimique, no omnesque accusata consectetuer vel, ex dico wisi exerci sea. His legimus graecis ea. Duo cu possim persius indoctum, mea vidit salutandi id.</p></div>
 </div>
-
+<script></script>
 <script src="accordion.js"></script>
 </body>
 </html>
